# lang-koi

./: .glottologid.txt  AUTHORS  CITATION.cff  Links.md  README  README.markdown  README.md  adjectives-affixes-fst-src.md  adjectives-stems-fst-src.md  adjectives_newwords-stems.md  adpositions-affixes-fst-src.md  adverbs-affixes-fst-src.md  adverbs-affixes.md  adverbs_newwords-stems-fst-src.md  autogen.sh  configure.ac  conjunctors-affixes-fst-src.md  disambiguator-cg3-src.md  functions-cg3-src.md  giella-koi.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  koi.jspwiki  koi.md  language-map.md  lemmacount.json  manifest.toml  manifest.toml.in  metadata.json  nouns-affixes-fst-src.md  nouns-affixes.md  nouns-stems-fst-src.md  nouns_newwords-stems-fst-src.md  numerals-affixes-fst-src.md  numerals-stems.md  numerals_newwords-stems-fst-src.md  numerals_newwords-stems.md  particles-affixes-fst-src.md  phonology-fst-src.md  (+76 more)
src/: Makefile.am  koi-num.txt
src/cg3/: disambiguator.cg3
src/fst/: Makefile.am  phonology.twolc  root.lexc
src/fst/affixes/: adjectives.lexc  adpositions.lexc  adverbs.lexc  nouns.lexc  numerals.lexc  pronouns.lexc  propernouns.lexc  verbs.lexc
src/fst/filters/: Makefile.am  rename-POS_before_Der-tags.regex  (+1 more)
src/fst/morphology/: Makefile.am  (+3 more)
src/hyphenation/: hyphenation.xfscript
src/morphology/: Makefile.am  root.lexc  tags.yaml
src/phonology/: koi-phon.twolc
src/syntax/: disambiguator.cg3
src/transcriptions/: transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-numbers-digit2text.lexc
(+213 files in other folders)
